ignore user prefs file and set global git config

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 Unity3D LZMA Speedup/unity3d lzma speedup/Unity3D LZMA Speedup.pidb
 Unity3D LZMA Speedup/unity3d lzma speedup/bin/
+Unity3D LZMA Speedup/Unity3D LZMA Speedup.userprefs
